Modified by Source

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<title></title>
 	</head>
 	<body>
-		
+		<a href="https://www.glitch.fun/creators">Glitch</a>
+		<a href="<#url#>"><#text#></a>
 	</body>
 </html>
