Modified by Source

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	</head>
 	<body>
 		<a href="https://www.glitch.fun/creators">Glitch</a>
-		<a href="<#url#>"><#text#></a>
+		<a href="https://kick.com/farwalker3">Kick</a>
+		
 	</body>
 </html>
