--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 	<body>
 		<a href="https://www.glitch.fun/creators">Glitch</a>
 		<a href="https://kick.com/farwalker3">Kick</a>
-		
+		<a href="https://odysee.com/@Farwalker3:5">Odysee</a>
 	</body>
 </html>
