Modified by Source

--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title></title>
+		<title>Awesome Stream</title>
 	</head>
 	<body>
 		<a href="https://www.glitch.fun/creators">Glitch</a>
 		<a href="https://kick.com/farwalker3">Kick</a>
 		<a href="https://odysee.com/@Farwalker3:5">Odysee</a>
+		<a href="<#url#>"><#text#></a>
 	</body>
 </html>
