Modified by Source

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 		<a href="https://www.glitch.fun/creators">Glitch</a>
 		<a href="https://kick.com/farwalker3">Kick</a>
 		<a href="https://odysee.com/@Farwalker3:5">Odysee</a>
-		<a href="<#url#>"><#text#></a>
+		<a href="https://studio.golightstream.com/login">Lightstream</a>
+		<a href="https://picarto.tv/">Picarto</a>
+		<a href="https://www.twitch.tv/farwalker3">Twitch</a>
+		<a href="https://studio.livereacting.com/">Livereact</a>
 	</body>
 </html>
