Modified by Source

--- a/index.html
+++ b/index.html
@@ -1,16 +1,92 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="UTF-8">
-		<title>Awesome Stream</title>
-	</head>
-	<body>
-		<a href="https://www.glitch.fun/creators">Glitch</a>
-		<a href="https://kick.com/farwalker3">Kick</a>
-		<a href="https://odysee.com/@Farwalker3:5">Odysee</a>
-		<a href="https://studio.golightstream.com/login">Lightstream</a>
-		<a href="https://picarto.tv/">Picarto</a>
-		<a href="https://www.twitch.tv/farwalker3">Twitch</a>
-		<a href="https://studio.livereacting.com/">Livereact</a>
-	</body>
+<html lang="en">
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Awesome Stream</title>
+
+	<style>
+		body {
+			font-family: system-ui, sans-serif;
+			margin: 0;
+			padding: 0;
+			background: #f7f7f7;
+			color: #222;
+		}
+
+		header {
+			padding: 2rem 1.5rem;
+			text-align: center;
+			font-size: 1.8rem;
+			font-weight: 700;
+			letter-spacing: -0.5px;
+		}
+
+		.section {
+			padding: 1.5rem;
+			max-width: 700px;
+			margin: 0 auto 2rem auto;
+			background: #fff;
+			border-radius: 14px;
+			box-shadow: 0 3px 14px rgba(0,0,0,0.08);
+		}
+
+		.section h2 {
+			margin-top: 0;
+			margin-bottom: 0.8rem;
+			font-size: 1.3rem;
+			font-weight: 600;
+		}
+
+		.list {
+			list-style: none;
+			padding: 0;
+			margin: 0;
+		}
+
+		.list li {
+			margin: 0.6rem 0;
+		}
+
+		.list a {
+			display: block;
+			padding: 0.7rem 0.9rem;
+			text-decoration: none;
+			color: #222;
+			border: 1px solid #ddd;
+			border-radius: 10px;
+			transition: all 0.2s ease;
+		}
+
+		.list a:hover {
+			background: #ececec;
+			border-color: #ccc;
+		}
+	</style>
+</head>
+
+<body>
+
+	<header>Awesome Stream</header>
+
+	<div class="section">
+		<h2>Platform I Stream <strong>From</strong></h2>
+		<ul class="list">
+			<li><a href="https://www.glitch.fun/creators">Glitch</a></li>
+			<li><a href="https://studio.golightstream.com/login">Lightstream</a></li>
+			<li><a href="https://studio.livereacting.com/">LiveReact</a></li>
+		</ul>
+	</div>
+
+	<div class="section">
+		<h2>Platforms I Stream <strong>To</strong></h2>
+		<ul class="list">
+			<li><a href="https://kick.com/farwalker3">Kick</a></li>
+			<li><a href="https://odysee.com/@Farwalker3:5">Odysee</a></li>
+			<li><a href="https://picarto.tv/">Picarto</a></li>
+			<li><a href="https://www.twitch.tv/farwalker3">Twitch</a></li>
+		</ul>
+	</div>
+
+</body>
 </html>
